crates/gr-profiles/src/snapshots/gr_profiles__tests__profile-dualsense.snap
---
source: crates/gr-profiles/src/lib.rs
expression: "serde_yaml::to_string(profile).expect(\"yaml\")"
---
profile_id: dualsense
display_name: DualSense
profile_family: dualsense
identity:
  vendor_id: 1356
  product_id: 3302
  version: 256
  transport_hints:
  - usb
  - bluetooth
capabilities:
  input:
  - category: button
    semantic: !input face-bottom
    optionality: required
  - category: button
    semantic: !input face-right
    optionality: required
  - category: button
    semantic: !input face-left
    optionality: required
  - category: button
    semantic: !input face-top
    optionality: required
  - category: button
    semantic: !input left-shoulder
    optionality: required
  - category: button
    semantic: !input right-shoulder
    optionality: required
  - category: button
    semantic: !input left-stick-button
    optionality: required
  - category: button
    semantic: !input right-stick-button
    optionality: required
  - category: system
    semantic: !input menu-primary
    optionality: required
  - category: system
    semantic: !input menu-secondary
    optionality: required
  - category: system
    semantic: !input guide
    optionality: required
  - category: button
    semantic: !input touch-click
    optionality: required
  - category: button
    semantic: !input dpad
    optionality: required
  - category: stick
    semantic: !input left-stick
    optionality: required
    range:
      kind: i16
      min: -32768
      max: 32767
  - category: stick
    semantic: !input right-stick
    optionality: required
    range:
      kind: i16
      min: -32768
      max: 32767
  - category: trigger
    semantic: !input left-trigger
    optionality: required
    range:
      kind: u16
      min: 0
      max: 65535
  - category: trigger
    semantic: !input right-trigger
    optionality: required
    range:
      kind: u16
      min: 0
      max: 65535
  - category: touch-surface
    semantic: !input touch-surface
    optionality: required
  - category: motion-sensor
    semantic: !input accelerometer
    optionality: optional
  - category: motion-sensor
    semantic: !input gyroscope
    optionality: optional
  output:
  - category: haptic
    semantic: !output rumble
    optionality: required
  - category: haptic
    semantic: !output haptics
    optionality: optional
  - category: lighting
    semantic: !output lighting
    optionality: required
  - category: lighting
    semantic: !output player-indicators
    optionality: required
  - category: trigger
    semantic: !output trigger-effect
    optionality: required
  - category: audio
    semantic: !output audio
    optionality: optional
supported_fidelity:
- compatibility
- identity-aware
- hardware-faithful
input_contract:
  required_fields:
  - buttons.face.cross
  - buttons.face.circle
  - buttons.face.square
  - buttons.face.triangle
  - buttons.shoulders.l1
  - buttons.shoulders.r1
  - buttons.stick_clicks.l3
  - buttons.stick_clicks.r3
  - buttons.system.create
  - buttons.system.options
  - buttons.system.ps
  - buttons.system.touchpad_click
  - dpad.up
  - dpad.down
  - dpad.left
  - dpad.right
  - sticks.left_x
  - sticks.left_y
  - sticks.right_x
  - sticks.right_y
  - triggers.l2
  - triggers.r2
  - touchpad.contact_1.active
  - touchpad.contact_1.x
  - touchpad.contact_1.y
  - touchpad.contact_2.active
  - touchpad.contact_2.x
  - touchpad.contact_2.y
  - motion.gyroscope.x
  - motion.gyroscope.y
  - motion.gyroscope.z
  - motion.accelerometer.x
  - motion.accelerometer.y
  - motion.accelerometer.z
  optional_fields: []
  ranges:
  - field: sticks.left_x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.left_y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.right_x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.right_y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: triggers.l2
    range:
      kind: u16
      min: 0
      max: 65535
  - field: triggers.r2
    range:
      kind: u16
      min: 0
      max: 65535
  - field: touchpad.contact_1.x
    range:
      kind: u16
      min: 0
      max: 1920
  - field: touchpad.contact_1.y
    range:
      kind: u16
      min: 0
      max: 1080
  - field: touchpad.contact_2.x
    range:
      kind: u16
      min: 0
      max: 1920
  - field: touchpad.contact_2.y
    range:
      kind: u16
      min: 0
      max: 1080
  - field: motion.gyroscope.x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.gyroscope.y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.gyroscope.z
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.accelerometer.x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.accelerometer.y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.accelerometer.z
    range:
      kind: i16
      min: -32768
      max: 32767
  delta_support: sparse-partial
descriptor_templates:
- fidelity: compatibility
  descriptor:
  - 5
  - 1
  - 9
  - 5
  - 161
  - 1
  - 133
  - 1
  - 9
  - 48
  - 9
  - 49
  - 9
  - 50
  - 9
  - 53
  - 9
  - 51
  - 9
  - 52
  - 21
  - 0
  - 38
  - 255
  - 0
  - 117
  - 8
  - 149
  - 6
  - 129
  - 2
  - 6
  - 0
  - 255
  - 9
  - 32
  - 149
  - 1
  - 129
  - 2
  - 5
  - 1
  - 9
  - 57
  - 21
  - 0
  - 37
  - 7
  - 53
  - 0
  - 70
  - 59
  - 1
  - 101
  - 20
  - 117
  - 4
  - 149
  - 1
  - 129
  - 66
  - 101
  - 0
  - 5
  - 9
  - 25
  - 1
  - 41
  - 15
  - 21
  - 0
  - 37
  - 1
  - 117
  - 1
  - 149
  - 15
  - 129
  - 2
  - 6
  - 0
  - 255
  - 9
  - 33
  - 149
  - 13
  - 129
  - 2
  - 6
  - 0
  - 255
  - 9
  - 34
  - 21
  - 0
  - 38
  - 255
  - 0
  - 117
  - 8
  - 149
  - 52
  - 129
  - 2
  - 133
  - 2
  - 9
  - 35
  - 149
  - 47
  - 145
  - 2
  - 133
  - 5
  - 9
  - 51
  - 149
  - 40
  - 177
  - 2
  - 133
  - 8
  - 9
  - 52
  - 149
  - 47
  - 177
  - 2
  - 133
  - 9
  - 9
  - 36
  - 149
  - 19
  - 177
  - 2
  - 133
  - 10
  - 9
  - 37
  - 149
  - 26
  - 177
  - 2
  - 133
  - 32
  - 9
  - 38
  - 149
  - 63
  - 177
  - 2
  - 133
  - 33
  - 9
  - 39
  - 149
  - 4
  - 177
  - 2
  - 133
  - 34
  - 9
  - 64
  - 149
  - 63
  - 177
  - 2
  - 133
  - 128
  - 9
  - 40
  - 149
  - 63
  - 177
  - 2
  - 133
  - 129
  - 9
  - 41
  - 149
  - 63
  - 177
  - 2
  - 133
  - 130
  - 9
  - 42
  - 149
  - 9
  - 177
  - 2
  - 133
  - 131
  - 9
  - 43
  - 149
  - 63
  - 177
  - 2
  - 133
  - 132
  - 9
  - 44
  - 149
  - 63
  - 177
  - 2
  - 133
  - 133
  - 9
  - 45
  - 149
  - 2
  - 177
  - 2
  - 133
  - 160
  - 9
  - 46
  - 149
  - 1
  - 177
  - 2
  - 133
  - 224
  - 9
  - 47
  - 149
  - 63
  - 177
  - 2
  - 133
  - 240
  - 9
  - 48
  - 149
  - 63
  - 177
  - 2
  - 133
  - 241
  - 9
  - 49
  - 149
  - 63
  - 177
  - 2
  - 133
  - 242
  - 9
  - 50
  - 149
  - 15
  - 177
  - 2
  - 133
  - 244
  - 9
  - 53
  - 149
  - 63
  - 177
  - 2
  - 133
  - 245
  - 9
  - 54
  - 149
  - 3
  - 177
  - 2
  - 192
- fidelity: identity-aware
  descriptor:
  - 5
  - 1
  - 9
  - 5
  - 161
  - 1
  - 133
  - 1
  - 9
  - 48
  - 9
  - 49
  - 9
  - 50
  - 9
  - 53
  - 9
  - 51
  - 9
  - 52
  - 21
  - 0
  - 38
  - 255
  - 0
  - 117
  - 8
  - 149
  - 6
  - 129
  - 2
  - 6
  - 0
  - 255
  - 9
  - 32
  - 149
  - 1
  - 129
  - 2
  - 5
  - 1
  - 9
  - 57
  - 21
  - 0
  - 37
  - 7
  - 53
  - 0
  - 70
  - 59
  - 1
  - 101
  - 20
  - 117
  - 4
  - 149
  - 1
  - 129
  - 66
  - 101
  - 0
  - 5
  - 9
  - 25
  - 1
  - 41
  - 15
  - 21
  - 0
  - 37
  - 1
  - 117
  - 1
  - 149
  - 15
  - 129
  - 2
  - 6
  - 0
  - 255
  - 9
  - 33
  - 149
  - 13
  - 129
  - 2
  - 6
  - 0
  - 255
  - 9
  - 34
  - 21
  - 0
  - 38
  - 255
  - 0
  - 117
  - 8
  - 149
  - 52
  - 129
  - 2
  - 133
  - 2
  - 9
  - 35
  - 149
  - 47
  - 145
  - 2
  - 133
  - 5
  - 9
  - 51
  - 149
  - 40
  - 177
  - 2
  - 133
  - 8
  - 9
  - 52
  - 149
  - 47
  - 177
  - 2
  - 133
  - 9
  - 9
  - 36
  - 149
  - 19
  - 177
  - 2
  - 133
  - 10
  - 9
  - 37
  - 149
  - 26
  - 177
  - 2
  - 133
  - 32
  - 9
  - 38
  - 149
  - 63
  - 177
  - 2
  - 133
  - 33
  - 9
  - 39
  - 149
  - 4
  - 177
  - 2
  - 133
  - 34
  - 9
  - 64
  - 149
  - 63
  - 177
  - 2
  - 133
  - 128
  - 9
  - 40
  - 149
  - 63
  - 177
  - 2
  - 133
  - 129
  - 9
  - 41
  - 149
  - 63
  - 177
  - 2
  - 133
  - 130
  - 9
  - 42
  - 149
  - 9
  - 177
  - 2
  - 133
  - 131
  - 9
  - 43
  - 149
  - 63
  - 177
  - 2
  - 133
  - 132
  - 9
  - 44
  - 149
  - 63
  - 177
  - 2
  - 133
  - 133
  - 9
  - 45
  - 149
  - 2
  - 177
  - 2
  - 133
  - 160
  - 9
  - 46
  - 149
  - 1
  - 177
  - 2
  - 133
  - 224
  - 9
  - 47
  - 149
  - 63
  - 177
  - 2
  - 133
  - 240
  - 9
  - 48
  - 149
  - 63
  - 177
  - 2
  - 133
  - 241
  - 9
  - 49
  - 149
  - 63
  - 177
  - 2
  - 133
  - 242
  - 9
  - 50
  - 149
  - 15
  - 177
  - 2
  - 133
  - 244
  - 9
  - 53
  - 149
  - 63
  - 177
  - 2
  - 133
  - 245
  - 9
  - 54
  - 149
  - 3
  - 177
  - 2
  - 192
- fidelity: hardware-faithful
  descriptor:
  - 5
  - 1
  - 9
  - 5
  - 161
  - 1
  - 133
  - 1
  - 9
  - 48
  - 9
  - 49
  - 9
  - 50
  - 9
  - 53
  - 9
  - 51
  - 9
  - 52
  - 21
  - 0
  - 38
  - 255
  - 0
  - 117
  - 8
  - 149
  - 6
  - 129
  - 2
  - 6
  - 0
  - 255
  - 9
  - 32
  - 149
  - 1
  - 129
  - 2
  - 5
  - 1
  - 9
  - 57
  - 21
  - 0
  - 37
  - 7
  - 53
  - 0
  - 70
  - 59
  - 1
  - 101
  - 20
  - 117
  - 4
  - 149
  - 1
  - 129
  - 66
  - 101
  - 0
  - 5
  - 9
  - 25
  - 1
  - 41
  - 15
  - 21
  - 0
  - 37
  - 1
  - 117
  - 1
  - 149
  - 15
  - 129
  - 2
  - 6
  - 0
  - 255
  - 9
  - 33
  - 149
  - 13
  - 129
  - 2
  - 6
  - 0
  - 255
  - 9
  - 34
  - 21
  - 0
  - 38
  - 255
  - 0
  - 117
  - 8
  - 149
  - 52
  - 129
  - 2
  - 133
  - 2
  - 9
  - 35
  - 149
  - 47
  - 145
  - 2
  - 133
  - 5
  - 9
  - 51
  - 149
  - 40
  - 177
  - 2
  - 133
  - 8
  - 9
  - 52
  - 149
  - 47
  - 177
  - 2
  - 133
  - 9
  - 9
  - 36
  - 149
  - 19
  - 177
  - 2
  - 133
  - 10
  - 9
  - 37
  - 149
  - 26
  - 177
  - 2
  - 133
  - 32
  - 9
  - 38
  - 149
  - 63
  - 177
  - 2
  - 133
  - 33
  - 9
  - 39
  - 149
  - 4
  - 177
  - 2
  - 133
  - 34
  - 9
  - 64
  - 149
  - 63
  - 177
  - 2
  - 133
  - 128
  - 9
  - 40
  - 149
  - 63
  - 177
  - 2
  - 133
  - 129
  - 9
  - 41
  - 149
  - 63
  - 177
  - 2
  - 133
  - 130
  - 9
  - 42
  - 149
  - 9
  - 177
  - 2
  - 133
  - 131
  - 9
  - 43
  - 149
  - 63
  - 177
  - 2
  - 133
  - 132
  - 9
  - 44
  - 149
  - 63
  - 177
  - 2
  - 133
  - 133
  - 9
  - 45
  - 149
  - 2
  - 177
  - 2
  - 133
  - 160
  - 9
  - 46
  - 149
  - 1
  - 177
  - 2
  - 133
  - 224
  - 9
  - 47
  - 149
  - 63
  - 177
  - 2
  - 133
  - 240
  - 9
  - 48
  - 149
  - 63
  - 177
  - 2
  - 133
  - 241
  - 9
  - 49
  - 149
  - 63
  - 177
  - 2
  - 133
  - 242
  - 9
  - 50
  - 149
  - 15
  - 177
  - 2
  - 133
  - 244
  - 9
  - 53
  - 149
  - 63
  - 177
  - 2
  - 133
  - 245
  - 9
  - 54
  - 149
  - 3
  - 177
  - 2
  - 192
reverse_command_support:
  supported:
  - !semantic rumble
  - !semantic haptics
  - !semantic lighting
  - !semantic player-indicators
  - !semantic trigger-effect
  - !semantic audio
