crates/gr-profiles/src/snapshots/gr_profiles__tests__profile-steam-controller.snap
---
source: crates/gr-profiles/src/lib.rs
expression: "serde_yaml::to_string(profile).expect(\"yaml\")"
---
profile_id: steam-controller
display_name: Steam Controller
profile_family: steam-controller
identity:
  vendor_id: 10462
  product_id: 4354
  version: null
  transport_hints:
  - usb
  - bluetooth
capabilities:
  input:
  - category: button
    semantic: !input face-bottom
    optionality: required
  - category: button
    semantic: !input face-right
    optionality: required
  - category: button
    semantic: !input face-left
    optionality: required
  - category: button
    semantic: !input face-top
    optionality: required
  - category: button
    semantic: !input left-shoulder
    optionality: required
  - category: button
    semantic: !input right-shoulder
    optionality: required
  - category: button
    semantic: !input left-stick-button
    optionality: required
  - category: button
    semantic: !input paddle-left
    optionality: required
  - category: button
    semantic: !input paddle-right
    optionality: required
  - category: system
    semantic: !input menu-primary
    optionality: required
  - category: system
    semantic: !input menu-secondary
    optionality: required
  - category: system
    semantic: !input guide
    optionality: required
  - category: stick
    semantic: !input left-stick
    optionality: required
    range:
      kind: i16
      min: -32768
      max: 32767
  - category: touch-surface
    semantic: !input touch-surface
    optionality: required
    range:
      kind: i16
      min: -32768
      max: 32767
  - category: motion-sensor
    semantic: !input accelerometer
    optionality: optional
  - category: motion-sensor
    semantic: !input gyroscope
    optionality: optional
  - category: trigger
    semantic: !input left-trigger
    optionality: required
    range:
      kind: u16
      min: 0
      max: 65535
  - category: trigger
    semantic: !input right-trigger
    optionality: required
    range:
      kind: u16
      min: 0
      max: 65535
  output:
  - category: haptic
    semantic: !output rumble
    optionality: required
  - category: lighting
    semantic: !output lighting
    optionality: optional
supported_fidelity:
- compatibility
- identity-aware
- hardware-faithful
input_contract:
  required_fields:
  - buttons.a
  - buttons.b
  - buttons.x
  - buttons.y
  - buttons.left_grip
  - buttons.right_grip
  - buttons.lb
  - buttons.rb
  - buttons.menu_primary
  - buttons.menu_secondary
  - buttons.steam
  - buttons.left_pad_click
  - buttons.right_pad_click
  - buttons.left_stick_click
  - sticks.left_pad_x
  - sticks.left_pad_y
  - sticks.right_pad_x
  - sticks.right_pad_y
  - sticks.left_stick_x
  - sticks.left_stick_y
  - triggers.lt
  - triggers.rt
  - motion.gyroscope.x
  - motion.gyroscope.y
  - motion.gyroscope.z
  - motion.accelerometer.x
  - motion.accelerometer.y
  - motion.accelerometer.z
  optional_fields: []
  ranges:
  - field: sticks.left_pad_x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.left_pad_y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.right_pad_x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.right_pad_y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.left_stick_x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.left_stick_y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: triggers.lt
    range:
      kind: u16
      min: 0
      max: 65535
  - field: triggers.rt
    range:
      kind: u16
      min: 0
      max: 65535
  - field: motion.gyroscope.x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.gyroscope.y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.gyroscope.z
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.accelerometer.x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.accelerometer.y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: motion.accelerometer.z
    range:
      kind: i16
      min: -32768
      max: 32767
  delta_support: sparse-partial
descriptor_templates:
- fidelity: compatibility
  descriptor:
  - 5
  - 1
  - 9
  - 5
  - 161
  - 1
  - 133
  - 1
  - 5
  - 9
  - 25
  - 1
  - 41
  - 14
  - 21
  - 0
  - 37
  - 1
  - 117
  - 1
  - 149
  - 14
  - 129
  - 2
  - 117
  - 2
  - 149
  - 1
  - 129
  - 1
  - 22
  - 0
  - 128
  - 38
  - 255
  - 127
  - 54
  - 0
  - 128
  - 70
  - 255
  - 127
  - 117
  - 16
  - 149
  - 6
  - 5
  - 1
  - 9
  - 48
  - 9
  - 49
  - 9
  - 50
  - 9
  - 53
  - 9
  - 51
  - 9
  - 52
  - 129
  - 2
  - 21
  - 0
  - 38
  - 255
  - 255
  - 117
  - 16
  - 149
  - 2
  - 5
  - 2
  - 9
  - 197
  - 9
  - 196
  - 129
  - 2
  - 133
  - 1
  - 6
  - 0
  - 255
  - 9
  - 36
  - 117
  - 16
  - 149
  - 6
  - 129
  - 2
  - 133
  - 2
  - 6
  - 0
  - 255
  - 9
  - 35
  - 117
  - 8
  - 149
  - 8
  - 145
  - 2
  - 192
- fidelity: identity-aware
  descriptor:
  - 5
  - 1
  - 9
  - 5
  - 161
  - 1
  - 133
  - 1
  - 5
  - 9
  - 25
  - 1
  - 41
  - 14
  - 21
  - 0
  - 37
  - 1
  - 117
  - 1
  - 149
  - 14
  - 129
  - 2
  - 117
  - 2
  - 149
  - 1
  - 129
  - 1
  - 22
  - 0
  - 128
  - 38
  - 255
  - 127
  - 54
  - 0
  - 128
  - 70
  - 255
  - 127
  - 117
  - 16
  - 149
  - 6
  - 5
  - 1
  - 9
  - 48
  - 9
  - 49
  - 9
  - 50
  - 9
  - 53
  - 9
  - 51
  - 9
  - 52
  - 129
  - 2
  - 21
  - 0
  - 38
  - 255
  - 255
  - 117
  - 16
  - 149
  - 2
  - 5
  - 2
  - 9
  - 197
  - 9
  - 196
  - 129
  - 2
  - 133
  - 1
  - 6
  - 0
  - 255
  - 9
  - 36
  - 117
  - 16
  - 149
  - 6
  - 129
  - 2
  - 133
  - 2
  - 6
  - 0
  - 255
  - 9
  - 35
  - 117
  - 8
  - 149
  - 8
  - 145
  - 2
  - 192
- fidelity: hardware-faithful
  descriptor:
  - 5
  - 1
  - 9
  - 5
  - 161
  - 1
  - 133
  - 1
  - 5
  - 9
  - 25
  - 1
  - 41
  - 14
  - 21
  - 0
  - 37
  - 1
  - 117
  - 1
  - 149
  - 14
  - 129
  - 2
  - 117
  - 2
  - 149
  - 1
  - 129
  - 1
  - 22
  - 0
  - 128
  - 38
  - 255
  - 127
  - 54
  - 0
  - 128
  - 70
  - 255
  - 127
  - 117
  - 16
  - 149
  - 6
  - 5
  - 1
  - 9
  - 48
  - 9
  - 49
  - 9
  - 50
  - 9
  - 53
  - 9
  - 51
  - 9
  - 52
  - 129
  - 2
  - 21
  - 0
  - 38
  - 255
  - 255
  - 117
  - 16
  - 149
  - 2
  - 5
  - 2
  - 9
  - 197
  - 9
  - 196
  - 129
  - 2
  - 133
  - 1
  - 6
  - 0
  - 255
  - 9
  - 36
  - 117
  - 16
  - 149
  - 6
  - 129
  - 2
  - 133
  - 2
  - 6
  - 0
  - 255
  - 9
  - 35
  - 117
  - 8
  - 149
  - 8
  - 145
  - 2
  - 192
reverse_command_support:
  supported:
  - !semantic rumble
  - !semantic lighting
