crates/gr-profiles/src/snapshots/gr_profiles__tests__profile-xbox360.snap
---
source: crates/gr-profiles/src/lib.rs
expression: "serde_yaml::to_string(profile).expect(\"yaml\")"
---
profile_id: xbox360
display_name: Xbox 360
profile_family: xbox360
identity:
  vendor_id: 1118
  product_id: 654
  version: null
  transport_hints:
  - usb
capabilities:
  input:
  - category: button
    semantic: !input face-bottom
    optionality: required
  - category: button
    semantic: !input face-right
    optionality: required
  - category: button
    semantic: !input face-left
    optionality: required
  - category: button
    semantic: !input face-top
    optionality: required
  - category: button
    semantic: !input left-shoulder
    optionality: required
  - category: button
    semantic: !input right-shoulder
    optionality: required
  - category: button
    semantic: !input left-stick-button
    optionality: required
  - category: button
    semantic: !input right-stick-button
    optionality: required
  - category: system
    semantic: !input menu-primary
    optionality: required
  - category: system
    semantic: !input menu-secondary
    optionality: required
  - category: system
    semantic: !input guide
    optionality: required
  - category: button
    semantic: !input dpad
    optionality: required
  - category: stick
    semantic: !input left-stick
    optionality: required
    range:
      kind: i16
      min: -32768
      max: 32767
  - category: stick
    semantic: !input right-stick
    optionality: required
    range:
      kind: i16
      min: -32768
      max: 32767
  - category: trigger
    semantic: !input left-trigger
    optionality: required
    range:
      kind: u16
      min: 0
      max: 65535
  - category: trigger
    semantic: !input right-trigger
    optionality: required
    range:
      kind: u16
      min: 0
      max: 65535
  output:
  - category: haptic
    semantic: !output rumble
    optionality: required
  - category: lighting
    semantic: !output lighting
    optionality: required
  - category: lighting
    semantic: !output player-indicators
    optionality: required
supported_fidelity:
- compatibility
- identity-aware
- hardware-faithful
input_contract:
  required_fields:
  - buttons.face.a
  - buttons.face.b
  - buttons.face.x
  - buttons.face.y
  - buttons.shoulders.lb
  - buttons.shoulders.rb
  - buttons.stick_clicks.ls
  - buttons.stick_clicks.rs
  - buttons.system.start
  - buttons.system.back
  - buttons.system.guide
  - dpad.up
  - dpad.down
  - dpad.left
  - dpad.right
  - sticks.left_x
  - sticks.left_y
  - sticks.right_x
  - sticks.right_y
  - triggers.lt
  - triggers.rt
  optional_fields: []
  ranges:
  - field: sticks.left_x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.left_y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.right_x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.right_y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: triggers.lt
    range:
      kind: u16
      min: 0
      max: 65535
  - field: triggers.rt
    range:
      kind: u16
      min: 0
      max: 65535
  delta_support: sparse-partial
descriptor_templates:
- fidelity: compatibility
  descriptor:
  - 5
  - 1
  - 9
  - 5
  - 161
  - 1
  - 5
  - 1
  - 9
  - 58
  - 161
  - 2
  - 117
  - 8
  - 149
  - 2
  - 5
  - 1
  - 9
  - 63
  - 9
  - 59
  - 129
  - 1
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 4
  - 5
  - 9
  - 25
  - 12
  - 41
  - 15
  - 129
  - 2
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 4
  - 5
  - 9
  - 9
  - 9
  - 9
  - 10
  - 9
  - 7
  - 9
  - 8
  - 129
  - 2
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 3
  - 5
  - 9
  - 9
  - 5
  - 9
  - 6
  - 9
  - 11
  - 129
  - 2
  - 117
  - 1
  - 149
  - 1
  - 129
  - 1
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 4
  - 5
  - 9
  - 25
  - 1
  - 41
  - 4
  - 129
  - 2
  - 117
  - 8
  - 21
  - 0
  - 38
  - 255
  - 0
  - 53
  - 0
  - 70
  - 255
  - 0
  - 149
  - 2
  - 5
  - 1
  - 9
  - 50
  - 9
  - 53
  - 129
  - 2
  - 117
  - 16
  - 22
  - 0
  - 128
  - 38
  - 255
  - 127
  - 54
  - 0
  - 128
  - 70
  - 255
  - 127
  - 5
  - 1
  - 9
  - 1
  - 161
  - 0
  - 149
  - 2
  - 5
  - 1
  - 9
  - 48
  - 9
  - 49
  - 129
  - 2
  - 192
  - 5
  - 1
  - 9
  - 1
  - 161
  - 0
  - 149
  - 2
  - 5
  - 1
  - 9
  - 51
  - 9
  - 52
  - 129
  - 2
  - 192
  - 192
  - 192
- fidelity: identity-aware
  descriptor:
  - 5
  - 1
  - 9
  - 5
  - 161
  - 1
  - 5
  - 1
  - 9
  - 58
  - 161
  - 2
  - 117
  - 8
  - 149
  - 2
  - 5
  - 1
  - 9
  - 63
  - 9
  - 59
  - 129
  - 1
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 4
  - 5
  - 9
  - 25
  - 12
  - 41
  - 15
  - 129
  - 2
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 4
  - 5
  - 9
  - 9
  - 9
  - 9
  - 10
  - 9
  - 7
  - 9
  - 8
  - 129
  - 2
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 3
  - 5
  - 9
  - 9
  - 5
  - 9
  - 6
  - 9
  - 11
  - 129
  - 2
  - 117
  - 1
  - 149
  - 1
  - 129
  - 1
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 4
  - 5
  - 9
  - 25
  - 1
  - 41
  - 4
  - 129
  - 2
  - 117
  - 8
  - 21
  - 0
  - 38
  - 255
  - 0
  - 53
  - 0
  - 70
  - 255
  - 0
  - 149
  - 2
  - 5
  - 1
  - 9
  - 50
  - 9
  - 53
  - 129
  - 2
  - 117
  - 16
  - 22
  - 0
  - 128
  - 38
  - 255
  - 127
  - 54
  - 0
  - 128
  - 70
  - 255
  - 127
  - 5
  - 1
  - 9
  - 1
  - 161
  - 0
  - 149
  - 2
  - 5
  - 1
  - 9
  - 48
  - 9
  - 49
  - 129
  - 2
  - 192
  - 5
  - 1
  - 9
  - 1
  - 161
  - 0
  - 149
  - 2
  - 5
  - 1
  - 9
  - 51
  - 9
  - 52
  - 129
  - 2
  - 192
  - 192
  - 192
- fidelity: hardware-faithful
  descriptor:
  - 5
  - 1
  - 9
  - 5
  - 161
  - 1
  - 5
  - 1
  - 9
  - 58
  - 161
  - 2
  - 117
  - 8
  - 149
  - 2
  - 5
  - 1
  - 9
  - 63
  - 9
  - 59
  - 129
  - 1
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 4
  - 5
  - 9
  - 25
  - 12
  - 41
  - 15
  - 129
  - 2
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 4
  - 5
  - 9
  - 9
  - 9
  - 9
  - 10
  - 9
  - 7
  - 9
  - 8
  - 129
  - 2
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 3
  - 5
  - 9
  - 9
  - 5
  - 9
  - 6
  - 9
  - 11
  - 129
  - 2
  - 117
  - 1
  - 149
  - 1
  - 129
  - 1
  - 117
  - 1
  - 21
  - 0
  - 37
  - 1
  - 53
  - 0
  - 69
  - 1
  - 149
  - 4
  - 5
  - 9
  - 25
  - 1
  - 41
  - 4
  - 129
  - 2
  - 117
  - 8
  - 21
  - 0
  - 38
  - 255
  - 0
  - 53
  - 0
  - 70
  - 255
  - 0
  - 149
  - 2
  - 5
  - 1
  - 9
  - 50
  - 9
  - 53
  - 129
  - 2
  - 117
  - 16
  - 22
  - 0
  - 128
  - 38
  - 255
  - 127
  - 54
  - 0
  - 128
  - 70
  - 255
  - 127
  - 5
  - 1
  - 9
  - 1
  - 161
  - 0
  - 149
  - 2
  - 5
  - 1
  - 9
  - 48
  - 9
  - 49
  - 129
  - 2
  - 192
  - 5
  - 1
  - 9
  - 1
  - 161
  - 0
  - 149
  - 2
  - 5
  - 1
  - 9
  - 51
  - 9
  - 52
  - 129
  - 2
  - 192
  - 192
  - 192
reverse_command_support:
  supported:
  - !semantic rumble
  - !semantic lighting
  - !semantic player-indicators
